packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_dollar_start_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 7,
      "end": 8
    },
    "severity": "warning",
    "message": "unclosed math equation; inserted a closing `$`",
    "hints": []
  }
]
