packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_paren_multi_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      21
    ],
    "items": 12,
    "width": 58.01,
    "height": 17.93,
    "x": -29.46,
    "y": 62.72
  },
  {
    "range": [
      23,
      29
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 122.25
  }
]
