packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_paren_multi_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 14,
      "end": 15
    },
    "severity": "error",
    "message": "unclosed delimiter",
    "hints": []
  }
]
