packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_quote_nested_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      14
    ],
    "items": 8,
    "width": 61.87,
    "height": 16.86,
    "x": 0.0,
    "y": 0.0
  }
]
